# autodetecter-aruco-foxyros2

./: README.md
aruco_localization/: package.xml  setup.cfg  setup.py
aruco_localization/aruco_localization/: aruco_detector.py
install/: local_setup.sh  setup.sh
install/aruco_localization/lib/aruco_localization/: aruco_detector
install/aruco_localization/share/aruco_localization/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
